Add new  methods